--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -3,10 +3,67 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Viewmodel="clr-namespace:ViewModels" d:DataContext="{d:DesignInstance Type=Viewmodel:ConnectionViewModel}"
+             xmlns:Viewmodel="clr-namespace:ViewModels" d:DataContext="{d:DesignInstance Type=Viewmodel:ConnectionViewModel}"
              mc:Ignorable="d"
         Height="650" Width="1200"
         Background="#FFFFFF">
+    <UserControl.Resources>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <Style x:Key="RoundedButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" CornerRadius="15" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="#EAB01E"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="#EAB01E"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="#F1CA68"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="#F1CA68"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     
     <UserControl.DataContext>
         <Viewmodel:ConnectionViewModel/>
@@ -14,9 +71,10 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="68*" />
+            <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
@@ -40,7 +98,7 @@
                        FontSize="13px"/>
 
                 <Label HorizontalAlignment="Center"
-                       Content="Connection"
+                       Content="PI Data Archive Server Connection"
                        Foreground="#FFFFFF"
                        FontWeight="SemiBold"
                        FontSize="13px"/>
@@ -89,11 +147,13 @@
 
             <Label Grid.Row="0" 
                    Content="Connection"
+                   HorizontalContentAlignment="Center"
                    VerticalAlignment="Center"
                    FontWeight="Medium"
-                   Foreground="#8395a7"
+                   Foreground="White"
+                   Background="#2e86de"
                    Margin="8,0,0,0"/>
-            <ListView Grid.Row="0"
+            <ListBox Grid.Row="0"
                       ItemsSource="{Binding Connection}" 
                       Background="Transparent"
                       BorderThickness="0"
@@ -101,22 +161,24 @@
 
             <Label Grid.Row="1" 
                    Content="Load Tags Attributes"
+                   HorizontalContentAlignment="Center"
                    VerticalAlignment="Center"
                    FontWeight="Medium"
                    Foreground="#8395a7"
                    Margin="8,0,0,0"/>
-            <ListView Grid.Row="1"
+            <ListBox Grid.Row="1"
                       ItemsSource="{Binding LoadTagsAttributes}" 
                       Background="Transparent"
                       BorderThickness="0"/>
 
             <Label Grid.Row="2"
                     Content="Push Tags Attributes"
+                    HorizontalContentAlignment="Center"
                     VerticalAlignment="Center"
                     FontWeight="Medium"
                     Foreground="#8395a7"
                     Margin="8,0,0,0"/>
-            <ListView ItemsSource="{Binding PushTagsAttributes}" 
+            <ListBox ItemsSource="{Binding PushTagsAttributes}" 
                       Background="Transparent"
                       BorderThickness="0"
                       Grid.Row="2"/>
@@ -145,21 +207,37 @@
         <Button Grid.Row="3" Grid.Column="1"
                 Content="Connect"
                 HorizontalAlignment="Center" 
-                VerticalAlignment="Center" 
+                VerticalAlignment="Center"
+                Width="100"
+                Height="20"
                 Command="{Binding ButtonConnectSourceServer}">
         </Button>
+
+        <Image Grid.Row="3" Grid.Column="1" Source="/Assets/Cross.png" Margin="228,12,58,12" />
+        <Image Grid.Row="3" Grid.Column="1" Source="/Assets/Check.png" Margin="228,12,58,12" />
 
         <Button Grid.Row="3" Grid.Column="2"
                 Content="Connect"
                 HorizontalAlignment="Center" 
-                VerticalAlignment="Center" 
+                VerticalAlignment="Center"
+                Width="100"
+                Height="20"
                 Command="{Binding ButtonConnectTargetServer}">
         </Button>
-        
-        <Button Grid.Row="4" Grid.Column="2"
+
+        <Image Grid.Row="3" Grid.Column="2" Source="/Assets/Cross.png" Margin="228,12,58,12" />
+        <Image Grid.Row="3" Grid.Column="1" Source="/Assets/Check.png" Margin="228,12,58,12" />
+
+        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="4" Grid.Column="2"
                 Content="Next"
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center" 
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Center"
+                Margin="0,0,18,0"
+                Height="30"
+                Width="90"
+                FontFamily="Arial"
+                Foreground="#FFFFFF"
+                Background="#2e86de"
                 Command="{Binding ButtonNextView}">
         </Button>
     </Grid>
