--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -35,57 +35,80 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="68*" />
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="45*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="45*"/>
+
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="550"/>
-            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="40*"/>
+            <ColumnDefinition Width="150*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="25*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView Grid.Row="1" Grid.Column="0" 
+        <Label HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Grid.Column="1"
+               Grid.Row="0"
+               Content="Source server :"
+               Foreground="#2d3436"
+               FontWeight="Bold"
+               FontSize="15px"
+               Margin="0,0,0,0"/>
+        
+        <ComboBox Grid.Row="1" Grid.Column="1" 
+                 HorizontalAlignment="Left"
                  x:Name="listSourceServer" 
                  ItemsSource="{Binding ListSourceServer}" 
                  SelectedItem="{Binding SelectedSourceServer}" 
-                 HorizontalAlignment="Center" 
                  VerticalAlignment="Center" 
                  Width="245" 
                  RenderTransformOrigin="0.5,0.5"/>
 
-        <ListView Grid.Row ="1" Grid.Column="1" 
+        <Label HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Grid.Column="1"
+               Grid.Row="2"
+               Content="Target server :"
+               Foreground="#2d3436"
+               FontWeight="Bold"
+               FontSize="15px"
+               Margin="0,0,0,0"/>
+        
+        <ComboBox Grid.Row ="3" Grid.Column="1" 
                   x:Name="listTargetServer" 
                   ItemsSource="{Binding ListTargetServer}" 
                   SelectedItem="{Binding SelectedTargetServer}" 
-                  HorizontalAlignment="Center" 
+                  HorizontalAlignment="Left" 
                   VerticalAlignment="Center" 
                   Width="245" 
                   RenderTransformOrigin="0.5,0.5"/>
 
-        <Button Grid.Row="2" Grid.Column="1"
+        <Button Grid.Row="1" Grid.Column="2"
                 Content="Connect"
-                HorizontalAlignment="Center" 
+                HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
                 Width="100"
                 Height="20"
                 Command="{Binding ButtonConnectSourceServer}">
         </Button>
 
-        <Image Grid.Row="2" Grid.Column="1" Source="/Assets/Cross.png" Margin="228,12,58,12" />
-        <Image Grid.Row="2" Grid.Column="1" Source="/Assets/Check.png" Margin="228,12,58,12" />
+        <Image Grid.Row="1" Grid.Column="3" HorizontalAlignment="Left" Source="/Assets/Cross.png" Visibility="Hidden"/>
+        <Image Grid.Row="1" Grid.Column="3" HorizontalAlignment="Left" Source="/Assets/Check.png" Visibility="Hidden"/>
 
-        <Button Grid.Row="2" Grid.Column="2"
+        <Button Grid.Row="3" Grid.Column="2"
                 Content="Connect"
-                HorizontalAlignment="Center" 
+                HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
                 Width="100"
                 Height="20"
                 Command="{Binding ButtonConnectTargetServer}">
         </Button>
 
-        <Image Grid.Row="2" Grid.Column="2" Source="/Assets/Cross.png" Margin="228,12,58,12" />
-        <Image Grid.Row="2" Grid.Column="1" Source="/Assets/Check.png" Margin="228,12,58,12" />
+        <Image Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left" Source="/Assets/Cross.png" Visibility="Hidden"/>
+        <Image Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left" Source="/Assets/Check.png" Visibility="Hidden"/>
     </Grid>
 </UserControl>
