--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -85,7 +85,8 @@
                   HorizontalAlignment="Left" 
                   VerticalAlignment="Top" 
                   Width="500" 
-                  RenderTransformOrigin="0.5,0.5"/>
+                  RenderTransformOrigin="0.5,0.5"
+                  SelectedValuePath=""/>
 
         <Button Grid.Row="1" Grid.Column="2"
                 Content="Connect"
