--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -121,7 +121,6 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="225"/>
             <ColumnDefinition Width="225"/>
             <ColumnDefinition Width="225"/>
@@ -129,69 +128,19 @@
             <ColumnDefinition Width="225*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Background="#c8d6e5"
-              Grid.Row="0"
-              Grid.RowSpan="6">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
-                <RowDefinition/>
-                <RowDefinition Height="60"/>
-            </Grid.RowDefinitions>
-
-            <Label Grid.Row="0" 
-                   Content="Connection"
-                   HorizontalContentAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontWeight="Medium"
-                   Foreground="#8395a7"
-                   Margin="8,0,0,0"/>
-            <ListBox Grid.Row="0"
-                      ItemsSource="{Binding Connection}" 
-                      Background="Transparent"
-                      BorderThickness="0"
-                      ItemContainerStyle="{StaticResource ConnectionCard}"/>
-
-            <Label Grid.Row="1" 
-                   Content="Load Tags Attributes"
-                   HorizontalContentAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontWeight="Medium"
-                   Foreground="White"
-                   Background="#2e86de"
-                   Margin="8,0,0,0"/>
-            <ListBox Style="{DynamicResource RoundedMenuButton2}" Grid.Row="1"
-                      ItemsSource="{Binding LoadTagsAttributes}" 
-                      Background="Transparent"
-                      BorderThickness="0"/>
-
-            <Label Grid.Row="2"
-                   Content="Push Tags Attributes"
-                   HorizontalContentAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontWeight="Medium"
-                   Foreground="#8395a7"
-                   Margin="8,0,0,0"/>
-            <ListBox ItemsSource="{Binding PushTagsAttributes}" 
-                      Background="Transparent"
-                      BorderThickness="0"
-                      Grid.Row="2"/>
-        </Grid>
-
-        <TextBlock Name="textBlock1" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1">
+        <TextBlock Name="textBlock1" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" FontSize="16px">
           <Bold>Source Server :</Bold> PI-DA-HQ-PPR
         </TextBlock>
 
         <CheckBox x:Name="cb1" Grid.Row="1" Grid.Column="2" Margin="5,0,0,0" 
-            Content="Load with local input (CSV)" IsThreeState="True" />
+            Content="Load with local input (CSV)" IsThreeState="True" FontSize="14px"/>
         
-        <CheckBox x:Name="cb2" Grid.Row="2" Grid.Column="2" Margin="5,0,0,0" 
-            Content="Loadall tags not replicated" IsThreeState="True" />
+        <CheckBox x:Name="cb2" Grid.Row="1" Grid.Column="3" Margin="5,0,0,0" 
+            Content="Loadall tags not replicated" IsThreeState="True" FontSize="14px" />
 
         <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="5"
                 Content="Continue"
-                HorizontalAlignment="Center" 
+                HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
                 Height="25"
                 Width="90"
@@ -203,8 +152,9 @@
 
         <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="4"
                 Content="Load Tags"
-                HorizontalAlignment="Center" 
+                HorizontalAlignment="Right" 
                 VerticalAlignment="Center"
+                Margin="0,0,20,0"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
@@ -213,11 +163,28 @@
                 Command="{Binding ButtonNextView}">
         </Button>
 
-        <Grid Margin="10" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="6">
+        <Grid Margin="10,20,0,0" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6">
             <DataGrid Name="dgUsers" AutoGenerateColumns="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
-                    <DataGridTextColumn Header="Birthday" Binding="{Binding Birthday}" />
+                    <DataGridTextColumn Header="Point Name" Binding="{Binding Name}" />
+                    <DataGridTextColumn Header="InstrumentTag" Binding="{Binding InstrumentTag}" />
+                    <DataGridTextColumn Header="Description" Binding="{Binding Description}" />
+                    <DataGridTextColumn Header="DisplayDigits" Binding="{Binding DisplayDigits}" />
+                    <DataGridTextColumn Header="Engunits" Binding="{Binding Engunits}" />
+                    <DataGridTextColumn Header="Exdesc" Binding="{Binding Exdesc}" />
+                    <DataGridTextColumn Header="Ptclassname" Binding="{Binding Ptclassname}" />
+                    <DataGridTextColumn Header="PointType" Binding="{Binding PointType}" />
+                    <DataGridTextColumn Header="Sourcetag" Binding="{Binding Sourcetag}" />
+                    <DataGridTextColumn Header="DigitalSet" Binding="{Binding DigitalSet}" />
+                    <DataGridTextColumn Header="Scan" Binding="{Binding Scan}" />
+                    <DataGridTextColumn Header="Shutdown" Binding="{Binding Shutdown}" />
+                    <DataGridTextColumn Header="Archiving" Binding="{Binding Archiving}" />
+                    <DataGridTextColumn Header="Convers" Binding="{Binding Convers}" />
+                    <DataGridTextColumn Header="Location1" Binding="{Binding Location1}" />
+                    <DataGridTextColumn Header="Location2" Binding="{Binding Location2}" />
+                    <DataGridTextColumn Header="Location3" Binding="{Binding Location3}" />
+                    <DataGridTextColumn Header="Location4" Binding="{Binding Location4}" />
+                    <DataGridTextColumn Header="Location5" Binding="{Binding Location5}" />
                 </DataGrid.Columns>
                 <DataGrid.RowDetailsTemplate>
                     <DataTemplate>
