navigation presque ok

--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -16,9 +16,9 @@
       WindowStyle="None"
       ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
 
-    <!--<Window.DataContext>
+    <Window.DataContext>
         <viewmodels:MainWindowViewModel/>
-    </Window.DataContext>-->
+    </Window.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
