--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Viewmodel="clr-namespace:ViewModels" d:DataContext="{d:DesignInstance Type=Viewmodel:LoadTagsConfigurationViewModel}"
-             mc:Ignorable="d"
+        xmlns:Viewmodel="clr-namespace:ViewModels"
+        mc:Ignorable="d"
         Height="Auto" Width="Auto"
         Background="#FFFFFF">
 
@@ -107,7 +107,7 @@
     </UserControl.Resources>
 
     <UserControl.DataContext>
-        <Viewmodel:ConnectionViewModel/>
+        <Viewmodel:LoadTagsConfigurationViewModel/>
     </UserControl.DataContext>
 
     <Grid>
