--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -192,7 +192,7 @@
                  HorizontalAlignment="Left"
                  x:Name="listSourceServer" 
                  ItemsSource="{Binding ListSourceServer}" 
-                 SelectedItem="{Binding SelectedSourceServer}" 
+                 SelectedItem="{Binding SelectedSourceServer, UpdateSourceTrigger=PropertyChanged}" 
                  VerticalAlignment="Top" 
                  Width="450"        
                  RenderTransformOrigin="0.5,0.5"/>
